[package]
name = "tinkoff-invest-types"
version = "2.19.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "tinkoff invest types library"
homepage = "https://github.com/WatchDG/rust-tinkoff-invest-types"
documentation = "https://docs.rs/tinkoff-invest-types"
repository = "https://github.com/WatchDG/rust-tinkoff-invest-types"
readme = "README.md"
edition = "2021"
exclude = [
    ".github",
    ".vs",
    "/contracts-repo",
    "!/contracts-repo/src/docs/contracts",
    ".gitignore",
    ".gitmodules"
]

[dependencies]
tonic = { version = "0.12" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }

[build-dependencies]
tonic-build = { version = "0.12" }