[package]
name = "tinkoff-invest-types"
version = "2.21.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "tinkoff invest types library"
homepage = "https://github.com/WatchDG/rust-tinkoff-invest-types"
documentation = "https://docs.rs/tinkoff-invest-types"
repository = "https://github.com/WatchDG/rust-tinkoff-invest-types"
readme = "README.md"
edition = "2024"
exclude = [
    ".github",
    ".vs",
    "/contracts-repo",
    "!/contracts-repo/src/docs/contracts",
    ".gitignore",
    ".gitmodules"
]

[dependencies]
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
prost = { version = "0.14" }
prost-types = { version = "0.14" }

[build-dependencies]
tonic-prost-build = { version = "0.14" }