[package]
name = "tinkoff-invest-types"
version = "2.25.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "Protobuf/gRPC types for the T-Bank (Tinkoff) Invest API"
homepage = "https://github.com/WatchDG/rust-tinkoff-invest-types"
documentation = "https://docs.rs/tinkoff-invest-types"
repository = "https://github.com/WatchDG/rust-tinkoff-invest-types"
readme = "README.md"
keywords = ["tinkoff", "tbank", "invest", "grpc", "protobuf"]
categories = ["api-bindings", "finance"]
edition = "2024"
rust-version = "1.85"
exclude = [
    ".github",
    ".vs",
    "/invest-contracts",
    "!/invest-contracts/src/docs/contracts",
    ".gitignore",
    ".gitmodules"
]

[dependencies]
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
prost = { version = "0.14" }
prost-types = { version = "0.14" }

[build-dependencies]
tonic-prost-build = { version = "0.14" }